2000-07-31  Martin Baulig  <baulig@suse.de>

	* gnome-icon-list.c (gnome_icon_list_new): Removed the adjustment
	argument and undeprecated this function.
	(gnome_icon_list_new_flags): Removed.

2000-07-29  Martin Baulig  <baulig@suse.de>

	* gnome-init.c (libgnomeui_post_args_parse): Call glade_gnome_init().

	* Makefile.am (libgnomeui_2_la_SOURCES): Added gnome-glade.c.

	* gnome-glade.c: Copied here from libglade/glade/glade-gnome.c
	and modified for gnome-libs HEAD (the file was copied directly
	in CVS to preserve its histroy, so don't be surprised if there's
	no log message).

2000-07-27  Martin Baulig  <baulig@suse.de>

	* gnome-canvas.c (gnome_canvas_destroy): Destroy may run
	multiple times nowadays.

	* gnome-icon-list.c (gnome_icon_list_clear): This needs to
	mark the icon list as dirty.

2000-07-27  Martin Baulig  <baulig@suse.de>

	* gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_destroy): Destroy
	may run multiple times nowadays.
	* gnome-icon-item.c (iti_destroy): Likewise.

2000-07-26  Martin Baulig  <baulig@suse.de>

	* gnome-icon-list.c: Use the normal canvas/layout scrolling
	methods here. [FIXME: This widget can use some loving.]
	(gnome_icon_list_set_hadjustment): Removed.
	(gnome_icon_list_set_vadjustment): Removed.

	* gnome-canvas.c: Fix scrolling for the new GtkLayout.
	(DISPLAY_X1, DISPLAY_Y1): Removed since it's always zero.
	(gnome_canvas_size_allocate): Use the layout's adjustments
	in the call to scroll_to() rather than DISPLAY_X1/Y1.
	(paint): Use the layout's adjustments to compute draw_x1 and
	draw_y1 rather than DISPLAY_X1/Y1.

	* gnome-less.c: Reflect latest GtkTextBuffer changes.

2000-07-25  Martin Baulig  <baulig@suse.de>

	* gnome-icon-list.c (gil_place_icon): Correctly halign the
	icons at the middle of their labels.

2000-07-25  Martin Baulig  <baulig@suse.de>

	Added new GnomeSelector widget. We'll subclass this for
	files, directories, icons, pixmaps and so on.

	* gnome-icon-selector.[ch]: New files.